fixed: modal width on small screens

--- a/js/app/restaurant/item.scss
+++ b/js/app/restaurant/item.scss
@@ -100,8 +100,13 @@ $cart-heading-line-height: ($navbar-height - ($panel-heading-padding-vertical * 
 
 #restaurant-opening-hours-modal {
   .modal-dialog {
-    width: 350px;
+    // width: inherit from bootstrap .modal-dialog
+
+    @media (min-width: $screen-xs-min) {
+      width: 350px;
+    }
   }
+
   .table-opening-hours {
     width: auto;
     thead > tr > th {
